Create the image using packer

--- a/infrastructure/image/Makefile
+++ b/infrastructure/image/Makefile
@@ -2,5 +2,8 @@ include lib.mk
 
 packer=$(call which, packer)
 
-build:  ## Build a new copy of the machine image
-	packer help
+build: build_success.txt ## Build a new copy of the machine image
+	$(info Done!)
+
+build_success.txt: packer.json packer_vars.json
+	packer build -var-file=packer_vars.json packer.json
