--- a/infrastructure/image/Makefile
+++ b/infrastructure/image/Makefile
@@ -5,5 +5,5 @@ packer=$(call which, packer)
 build: build_success.txt ## Build a new copy of the machine image
 	$(info Done!)
 
-build_success.txt: packer.json packer_vars.json
-	packer build -var-file=packer_vars.json packer.json
+build_success.txt: packer.json packer_vars.json $(packer)
+	$(packer) build -var-file=packer_vars.json packer.json
