Depend on image id for host

--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -2,7 +2,7 @@ include lib.mk
 
 .PRECIOUS: terraform.tfstate
 terraform=$(call which, terraform)
-SOURCES=$(wildcard *.tf) terraform.tfvars provision.sh
+SOURCES=$(wildcard *.tf) terraform.tfvars provision.sh image.auto.tfvars
 
 deploy: terraform.tfstate ## Deploy changes
 	$(terraform) output -state=$<
@@ -22,3 +22,9 @@ lint: $(terraform) ## Make sure your terraform looks nice
 .terraform/ready: $(terraform)
 	$(terraform) init
 	@touch $@
+
+image.auto.tfvars: image/image_id.txt
+	echo "host_image_id = \"`cat $<`\"" > $@
+
+image/image_id.txt:
+	$(MAKE) -C image build
