--- a/infrastructure/image/Makefile
+++ b/infrastructure/image/Makefile
@@ -2,8 +2,10 @@ include lib.mk
 
 packer=$(call which, packer)
 
-build: build_success.txt ## Build a new copy of the machine image
+build: image_id.txt ## Build a new copy of the machine image
 	$(info Done!)
 
-build_success.txt: packer.json packer_vars.json $(packer)
-	$(packer) build -var-file=packer_vars.json packer.json
+image_id.txt: packer.json packer_vars.json $(packer)
+	$(packer) build -var-file=packer_vars.json -machine-readable packer.json \
+		| awk -F',' '$$2=="triton" && $$3=="artifact" && $$5=="id" { print $$6 }' \
+		> $@
